--- a/BinarySearchTreeExample/BinarySearchTreeExample.csproj
+++ b/BinarySearchTreeExample/BinarySearchTreeExample.csproj
@@ -46,6 +46,7 @@
     <Compile Include="UCOneBinarySearchTree.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="UCThreeBinarySearchTree.cs" />
     <Compile Include="UCTwoBinarySearchTree.cs" />
   </ItemGroup>
   <ItemGroup>
